[gd_scene load_steps=14 format=2]

[ext_resource path="res://util/icons/play.png" type="Texture" id=1]
[ext_resource path="res://util/icons/pause.png" type="Texture" id=2]
[ext_resource path="res://interface/GameControls.gd" type="Script" id=3]
[ext_resource path="res://util/icons/fastest.png" type="Texture" id=4]
[ext_resource path="res://util/icons/faster.png" type="Texture" id=5]

[sub_resource type="InputEventKey" id=1]
scancode = 32

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[sub_resource type="InputEventKey" id=3]
scancode = 49

[sub_resource type="ShortCut" id=4]
shortcut = SubResource( 3 )

[sub_resource type="InputEventKey" id=5]
scancode = 50

[sub_resource type="ShortCut" id=6]
shortcut = SubResource( 5 )

[sub_resource type="InputEventKey" id=7]
scancode = 51

[sub_resource type="ShortCut" id=8]
shortcut = SubResource( 7 )

[node name="GameSpeedControls" type="HBoxContainer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -86.0
margin_top = 10.0
margin_right = 86.0
margin_bottom = 40.0
grow_horizontal = 0
alignment = 2
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stop" type="Button" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
hint_tooltip = "Pause"
shortcut = SubResource( 2 )
icon = ExtResource( 2 )
flat = true
clip_text = true
expand_icon = true

[node name="Normal" type="Button" parent="."]
margin_left = 44.0
margin_right = 84.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
hint_tooltip = "Normal Speed"
disabled = true
shortcut = SubResource( 4 )
icon = ExtResource( 1 )
flat = true
clip_text = true
expand_icon = true

[node name="Faster" type="Button" parent="."]
margin_left = 88.0
margin_right = 128.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
hint_tooltip = "Faster Speed"
shortcut = SubResource( 6 )
icon = ExtResource( 5 )
flat = true
clip_text = true
expand_icon = true

[node name="Fastest" type="Button" parent="."]
margin_left = 132.0
margin_right = 172.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
hint_tooltip = "Fastest Speed"
shortcut = SubResource( 8 )
icon = ExtResource( 4 )
flat = true
clip_text = true
expand_icon = true

[connection signal="pressed" from="Stop" to="." method="_on_Stop_pressed"]
[connection signal="pressed" from="Normal" to="." method="_on_Normal_pressed"]
[connection signal="pressed" from="Faster" to="." method="_on_Faster_pressed"]
[connection signal="pressed" from="Fastest" to="." method="_on_Fastest_pressed"]
